--- a/cleaning-praise-data.ipynb
+++ b/cleaning-praise-data.ipynb
@@ -4507,12 +4507,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Now we're ready to use the dictionary to substitute into the data frame."
+    "#### Reality check: every name in the data set has a key now?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 1 remaining users with no representation.\n",
+      "These users are \n",
+      "\n",
+      "nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "last_remaining = [user for user in combined_users if(not(user in names_dict.keys()))]\n",
+    "num_remaining = len(last_remaining)\n",
+    "print(\"There are {} remaining users with no representation.\".format(num_remaining))\n",
+    "print(\"These users are \\n\")\n",
+    "\n",
+    "for name in last_remaining:\n",
+    "    print(name)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We have a \"nan\" that someho became a user. We're not sure how ths hapenned, but we can live with it -- all users have been processed. Now we're ready to use the dictionary to substitute these names into the data frame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4542,11 +4575,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "noqdf.to_csv(\"cleaned-non-qualifier-data.csv\")"
+    "noqdf.to_csv(\"cleaned-non-quantifier-data.csv\")"
    ]
   }
  ],
