Don't add index to csv.

--- a/cleaning-praise-data.ipynb
+++ b/cleaning-praise-data.ipynb
@@ -5857,7 +5857,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noqdf.to_csv(\"cleaned-non-quantifier-data.csv\")"
+    "noqdf.to_csv(\"cleaned-non-quantifier-data.csv\", index=False)"
    ]
   }
  ],
