Evaluating Workers Paid.

--- a/cleaning-praise-data.ipynb
+++ b/cleaning-praise-data.ipynb
@@ -5883,6 +5883,18 @@
    "source": [
     "noqdf.to_csv(\"outputs/cleaned-non-quantifier-data.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('outputs/names_dict.json', 'wb') as handle:\n",
+    "    pickle.dump(names_dict, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
   }
  ],
  "metadata": {
